runtime/gen/basis-ffi.h

extern const C_Int_t Posix_Error_EAGAIN;
extern const C_Int_t Posix_Error_EALREADY;
extern const C_Int_t Posix_Error_EBADF;
extern const C_Int_t Posix_Error_EBADMSG;
extern const C_Int_t Posix_Error_EBUSY;
extern const C_Int_t Posix_Error_ECANCELED;
extern const C_Int_t Posix_Error_ECHILD;
extern const C_Int_t Posix_Error_ECONNABORTED;
extern const C_Int_t Posix_Error_ECONNREFUSED;
extern const C_Int_t Posix_Error_ECONNRESET;
extern const C_Int_t Posix_Error_EDEADLK;
extern const C_Int_t Posix_Error_EDESTADDRREQ;
extern const C_Int_t Posix_Error_EDOM;
extern const C_Int_t Posix_Error_EDQUOT;
extern const C_Int_t Posix_Error_EEXIST;
extern const C_Int_t Posix_Error_EFAULT;
extern const C_Int_t Posix_Error_EFBIG;
extern const C_Int_t Posix_Error_EHOSTUNREACH;
extern const C_Int_t Posix_Error_EIDRM;
extern const C_Int_t Posix_Error_EILSEQ;
extern const C_Int_t Posix_Error_EINPROGRESS;
extern const C_Int_t Posix_Error_EINTR;
extern const C_Int_t Posix_Error_EINVAL;
extern const C_Int_t Posix_Error_EIO;
extern const C_Int_t Posix_Error_EISCONN;
extern const C_Int_t Posix_Error_EISDIR;
extern const C_Int_t Posix_Error_ELOOP;
extern const C_Int_t Posix_Error_EMFILE;
extern const C_Int_t Posix_Error_EMLINK;
extern const C_Int_t Posix_Error_EMSGSIZE;
extern const C_Int_t Posix_Error_EMULTIHOP;
extern const C_Int_t Posix_Error_ENAMETOOLONG;
extern const C_Int_t Posix_Error_ENETDOWN;
extern const C_Int_t Posix_Error_ENETRESET;
extern const C_Int_t Posix_Error_ENETUNREACH;
extern const C_Int_t Posix_Error_ENFILE;
extern const C_Int_t Posix_Error_ENOBUFS;
extern const C_Int_t Posix_Error_ENODATA;
extern const C_Int_t Posix_Error_ENODEV;
extern const C_Int_t Posix_Error_ENOENT;
extern const C_Int_t Posix_Error_ENOEXEC;
extern const C_Int_t Posix_Error_ENOLCK;
extern const C_Int_t Posix_Error_ENOLINK;
extern const C_Int_t Posix_Error_ENOMEM;
extern const C_Int_t Posix_Error_ENOMSG;
extern const C_Int_t Posix_Error_ENOPROTOOPT;
extern const C_Int_t Posix_Error_ENOSPC;
extern const C_Int_t Posix_Error_ENOSR;
extern const C_Int_t Posix_Error_ENOSTR;
extern const C_Int_t Posix_Error_ENOSYS;
extern const C_Int_t Posix_Error_ENOTCONN;
extern const C_Int_t Posix_Error_ENOTDIR;
extern const C_Int_t Posix_Error_ENOTEMPTY;
extern const C_Int_t Posix_Error_ENOTSOCK;
extern const C_Int_t Posix_Error_ENOTSUP;
extern const C_Int_t Posix_Error_ENOTTY;
extern const C_Int_t Posix_Error_ENXIO;
extern const C_Int_t Posix_Error_EOPNOTSUPP;
extern const C_Int_t Posix_Error_EOVERFLOW;
extern const C_Int_t Posix_Error_EPERM;
extern const C_Int_t Posix_Error_EPIPE;
extern const C_Int_t Posix_Error_EPROTO;
extern const C_Int_t Posix_Error_EPROTONOSUPPORT;
extern const C_Int_t Posix_Error_EPROTOTYPE;
extern const C_Int_t Posix_Error_ERANGE;
extern const C_Int_t Posix_Error_EROFS;
extern const C_Int_t Posix_Error_ESPIPE;
extern const C_Int_t Posix_Error_ESRCH;
extern const C_Int_t Posix_Error_ESTALE;
extern const C_Int_t Posix_Error_ETIME;
extern const C_Int_t Posix_Error_ETIMEDOUT;
extern const C_Int_t Posix_Error_ETXTBSY;
extern const C_Int_t Posix_Error_EWOULDBLOCK;
extern const C_Int_t Posix_Error_EXDEV;
C_Int_t Posix_Error_getErrno(void);
C_String_t Posix_Error_strError(C_Int_t);
extern const C_Int_t Posix_FileSys_A_F_OK;
extern const C_Int_t Posix_FileSys_A_R_OK;
extern const C_Int_t Posix_FileSys_A_W_OK;
extern const C_Int_t Posix_FileSys_A_X_OK;
C_Errno_t(C_Int_t) Posix_FileSys_access(NullString8_t,C_Int_t);
C_Errno_t(C_Int_t) Posix_FileSys_chdir(NullString8_t);
C_Errno_t(C_Int_t) Posix_FileSys_chmod(NullString8_t,C_Mode_t);
C_Errno_t(C_Int_t) Posix_FileSys_chown(NullString8_t,C_UId_t,C_GId_t);
C_Errno_t(C_Int_t) Posix_FileSys_Dirstream_closeDir(C_DirP_t);
C_Errno_t(C_DirP_t) Posix_FileSys_Dirstream_openDir(NullString8_t);
C_Errno_t(C_String_t) Posix_FileSys_Dirstream_readDir(C_DirP_t);
void Posix_FileSys_Dirstream_rewindDir(C_DirP_t);
C_Errno_t(C_Int_t) Posix_FileSys_fchdir(C_Fd_t);
C_Errno_t(C_Int_t) Posix_FileSys_fchmod(C_Fd_t,C_Mode_t);
C_Errno_t(C_Int_t) Posix_FileSys_fchown(C_Fd_t,C_UId_t,C_GId_t);
C_Errno_t(C_Long_t) Posix_FileSys_fpathconf(C_Fd_t,C_Int_t);
C_Errno_t(C_Int_t) Posix_FileSys_ftruncate(C_Fd_t,C_Off_t);
C_Errno_t(C_String_t) Posix_FileSys_getcwd(Array(Char8_t),C_Size_t);
C_Errno_t(C_Int_t) Posix_FileSys_link(NullString8_t,NullString8_t);
C_Errno_t(C_Int_t) Posix_FileSys_mkdir(NullString8_t,C_Mode_t);
C_Errno_t(C_Int_t) Posix_FileSys_mkfifo(NullString8_t,C_Mode_t);
extern const C_Int_t Posix_FileSys_O_APPEND;
extern const C_Int_t Posix_FileSys_O_BINARY;
extern const C_Int_t Posix_FileSys_O_CREAT;
extern const C_Int_t Posix_FileSys_O_DSYNC;
extern const C_Int_t Posix_FileSys_O_EXCL;
extern const C_Int_t Posix_FileSys_O_NOCTTY;
extern const C_Int_t Posix_FileSys_O_NONBLOCK;
extern const C_Int_t Posix_FileSys_O_RDONLY;
extern const C_Int_t Posix_FileSys_O_RDWR;
extern const C_Int_t Posix_FileSys_O_RSYNC;
extern const C_Int_t Posix_FileSys_O_SYNC;
extern const C_Int_t Posix_FileSys_O_TEXT;
extern const C_Int_t Posix_FileSys_O_TRUNC;
extern const C_Int_t Posix_FileSys_O_WRONLY;
C_Errno_t(C_Fd_t) Posix_FileSys_open2(NullString8_t,C_Int_t);
C_Errno_t(C_Fd_t) Posix_FileSys_open3(NullString8_t,C_Int_t,C_Mode_t);
C_Errno_t(C_Long_t) Posix_FileSys_pathconf(NullString8_t,C_Int_t);
extern const C_Int_t Posix_FileSys_PC_ALLOC_SIZE_MIN;
extern const C_Int_t Posix_FileSys_PC_ASYNC_IO;
extern const C_Int_t Posix_FileSys_PC_CHOWN_RESTRICTED;
extern const C_Int_t Posix_FileSys_PC_FILESIZEBITS;
extern const C_Int_t Posix_FileSys_PC_LINK_MAX;
extern const C_Int_t Posix_FileSys_PC_MAX_CANON;
extern const C_Int_t Posix_FileSys_PC_MAX_INPUT;
extern const C_Int_t Posix_FileSys_PC_NAME_MAX;
extern const C_Int_t Posix_FileSys_PC_NO_TRUNC;
extern const C_Int_t Posix_FileSys_PC_PATH_MAX;
extern const C_Int_t Posix_FileSys_PC_PIPE_BUF;
extern const C_Int_t Posix_FileSys_PC_PRIO_IO;
extern const C_Int_t Posix_FileSys_PC_REC_INCR_XFER_SIZE;
extern const C_Int_t Posix_FileSys_PC_REC_MAX_XFER_SIZE;
extern const C_Int_t Posix_FileSys_PC_REC_MIN_XFER_SIZE;
extern const C_Int_t Posix_FileSys_PC_REC_XFER_ALIGN;
extern const C_Int_t Posix_FileSys_PC_SYMLINK_MAX;
extern const C_Int_t Posix_FileSys_PC_SYNC_IO;
extern const C_Int_t Posix_FileSys_PC_TWO_SYMLINKS;
extern const C_Int_t Posix_FileSys_PC_VDISABLE;
C_Errno_t(C_SSize_t) Posix_FileSys_readlink(NullString8_t,Array(Char8_t),C_Size_t);
C_Errno_t(C_Int_t) Posix_FileSys_rename(NullString8_t,NullString8_t);
C_Errno_t(C_Int_t) Posix_FileSys_rmdir(NullString8_t);
extern const C_Mode_t Posix_FileSys_S_IFBLK;
extern const C_Mode_t Posix_FileSys_S_IFCHR;
extern const C_Mode_t Posix_FileSys_S_IFDIR;
extern const C_Mode_t Posix_FileSys_S_IFIFO;
extern const C_Mode_t Posix_FileSys_S_IFLNK;
extern const C_Mode_t Posix_FileSys_S_IFMT;
extern const C_Mode_t Posix_FileSys_S_IFREG;
extern const C_Mode_t Posix_FileSys_S_IFSOCK;
extern const C_Mode_t Posix_FileSys_S_IRGRP;
extern const C_Mode_t Posix_FileSys_S_IROTH;
extern const C_Mode_t Posix_FileSys_S_IRUSR;
extern const C_Mode_t Posix_FileSys_S_IRWXG;
extern const C_Mode_t Posix_FileSys_S_IRWXO;
extern const C_Mode_t Posix_FileSys_S_IRWXU;
extern const C_Mode_t Posix_FileSys_S_ISGID;
extern const C_Mode_t Posix_FileSys_S_ISUID;
extern const C_Mode_t Posix_FileSys_S_ISVTX;
extern const C_Mode_t Posix_FileSys_S_IWGRP;
extern const C_Mode_t Posix_FileSys_S_IWOTH;
extern const C_Mode_t Posix_FileSys_S_IWUSR;
extern const C_Mode_t Posix_FileSys_S_IXGRP;
extern const C_Mode_t Posix_FileSys_S_IXOTH;
extern const C_Mode_t Posix_FileSys_S_IXUSR;
C_Int_t Posix_FileSys_ST_isBlk(C_Mode_t);
C_Int_t Posix_FileSys_ST_isChr(C_Mode_t);
C_Int_t Posix_FileSys_ST_isDir(C_Mode_t);
C_Int_t Posix_FileSys_ST_isFIFO(C_Mode_t);
C_Int_t Posix_FileSys_ST_isLink(C_Mode_t);
C_Int_t Posix_FileSys_ST_isReg(C_Mode_t);
C_Int_t Posix_FileSys_ST_isSock(C_Mode_t);
C_Errno_t(C_Int_t) Posix_FileSys_Stat_fstat(C_Fd_t);
C_Time_t Posix_FileSys_Stat_getATime(void);
C_Time_t Posix_FileSys_Stat_getCTime(void);
C_Dev_t Posix_FileSys_Stat_getDev(void);
C_GId_t Posix_FileSys_Stat_getGId(void);
C_INo_t Posix_FileSys_Stat_getINo(void);
C_Mode_t Posix_FileSys_Stat_getMode(void);
C_Time_t Posix_FileSys_Stat_getMTime(void);
C_NLink_t Posix_FileSys_Stat_getNLink(void);
C_Dev_t Posix_FileSys_Stat_getRDev(void);
C_Off_t Posix_FileSys_Stat_getSize(void);
C_UId_t Posix_FileSys_Stat_getUId(void);
C_Errno_t(C_Int_t) Posix_FileSys_Stat_lstat(NullString8_t);