runtime/gen/basis-ffi.sml

val EAGAIN = _const "Posix_Error_EAGAIN" : C_Int.t;
val EALREADY = _const "Posix_Error_EALREADY" : C_Int.t;
val EBADF = _const "Posix_Error_EBADF" : C_Int.t;
val EBADMSG = _const "Posix_Error_EBADMSG" : C_Int.t;
val EBUSY = _const "Posix_Error_EBUSY" : C_Int.t;
val ECANCELED = _const "Posix_Error_ECANCELED" : C_Int.t;
val ECHILD = _const "Posix_Error_ECHILD" : C_Int.t;
val ECONNABORTED = _const "Posix_Error_ECONNABORTED" : C_Int.t;
val ECONNREFUSED = _const "Posix_Error_ECONNREFUSED" : C_Int.t;
val ECONNRESET = _const "Posix_Error_ECONNRESET" : C_Int.t;
val EDEADLK = _const "Posix_Error_EDEADLK" : C_Int.t;
val EDESTADDRREQ = _const "Posix_Error_EDESTADDRREQ" : C_Int.t;
val EDOM = _const "Posix_Error_EDOM" : C_Int.t;
val EDQUOT = _const "Posix_Error_EDQUOT" : C_Int.t;
val EEXIST = _const "Posix_Error_EEXIST" : C_Int.t;
val EFAULT = _const "Posix_Error_EFAULT" : C_Int.t;
val EFBIG = _const "Posix_Error_EFBIG" : C_Int.t;
val EHOSTUNREACH = _const "Posix_Error_EHOSTUNREACH" : C_Int.t;
val EIDRM = _const "Posix_Error_EIDRM" : C_Int.t;
val EILSEQ = _const "Posix_Error_EILSEQ" : C_Int.t;
val EINPROGRESS = _const "Posix_Error_EINPROGRESS" : C_Int.t;
val EINTR = _const "Posix_Error_EINTR" : C_Int.t;
val EINVAL = _const "Posix_Error_EINVAL" : C_Int.t;
val EIO = _const "Posix_Error_EIO" : C_Int.t;
val EISCONN = _const "Posix_Error_EISCONN" : C_Int.t;
val EISDIR = _const "Posix_Error_EISDIR" : C_Int.t;
val ELOOP = _const "Posix_Error_ELOOP" : C_Int.t;
val EMFILE = _const "Posix_Error_EMFILE" : C_Int.t;
val EMLINK = _const "Posix_Error_EMLINK" : C_Int.t;
val EMSGSIZE = _const "Posix_Error_EMSGSIZE" : C_Int.t;
val EMULTIHOP = _const "Posix_Error_EMULTIHOP" : C_Int.t;
val ENAMETOOLONG = _const "Posix_Error_ENAMETOOLONG" : C_Int.t;
val ENETDOWN = _const "Posix_Error_ENETDOWN" : C_Int.t;
val ENETRESET = _const "Posix_Error_ENETRESET" : C_Int.t;
val ENETUNREACH = _const "Posix_Error_ENETUNREACH" : C_Int.t;
val ENFILE = _const "Posix_Error_ENFILE" : C_Int.t;
val ENOBUFS = _const "Posix_Error_ENOBUFS" : C_Int.t;
val ENODATA = _const "Posix_Error_ENODATA" : C_Int.t;
val ENODEV = _const "Posix_Error_ENODEV" : C_Int.t;
val ENOENT = _const "Posix_Error_ENOENT" : C_Int.t;
val ENOEXEC = _const "Posix_Error_ENOEXEC" : C_Int.t;
val ENOLCK = _const "Posix_Error_ENOLCK" : C_Int.t;
val ENOLINK = _const "Posix_Error_ENOLINK" : C_Int.t;
val ENOMEM = _const "Posix_Error_ENOMEM" : C_Int.t;
val ENOMSG = _const "Posix_Error_ENOMSG" : C_Int.t;
val ENOPROTOOPT = _const "Posix_Error_ENOPROTOOPT" : C_Int.t;
val ENOSPC = _const "Posix_Error_ENOSPC" : C_Int.t;
val ENOSR = _const "Posix_Error_ENOSR" : C_Int.t;
val ENOSTR = _const "Posix_Error_ENOSTR" : C_Int.t;
val ENOSYS = _const "Posix_Error_ENOSYS" : C_Int.t;
val ENOTCONN = _const "Posix_Error_ENOTCONN" : C_Int.t;
val ENOTDIR = _const "Posix_Error_ENOTDIR" : C_Int.t;
val ENOTEMPTY = _const "Posix_Error_ENOTEMPTY" : C_Int.t;
val ENOTSOCK = _const "Posix_Error_ENOTSOCK" : C_Int.t;
val ENOTSUP = _const "Posix_Error_ENOTSUP" : C_Int.t;
val ENOTTY = _const "Posix_Error_ENOTTY" : C_Int.t;
val ENXIO = _const "Posix_Error_ENXIO" : C_Int.t;
val EOPNOTSUPP = _const "Posix_Error_EOPNOTSUPP" : C_Int.t;
val EOVERFLOW = _const "Posix_Error_EOVERFLOW" : C_Int.t;
val EPERM = _const "Posix_Error_EPERM" : C_Int.t;
val EPIPE = _const "Posix_Error_EPIPE" : C_Int.t;
val EPROTO = _const "Posix_Error_EPROTO" : C_Int.t;
val EPROTONOSUPPORT = _const "Posix_Error_EPROTONOSUPPORT" : C_Int.t;
val EPROTOTYPE = _const "Posix_Error_EPROTOTYPE" : C_Int.t;
val ERANGE = _const "Posix_Error_ERANGE" : C_Int.t;
val EROFS = _const "Posix_Error_EROFS" : C_Int.t;
val ESPIPE = _const "Posix_Error_ESPIPE" : C_Int.t;
val ESRCH = _const "Posix_Error_ESRCH" : C_Int.t;
val ESTALE = _const "Posix_Error_ESTALE" : C_Int.t;
val ETIME = _const "Posix_Error_ETIME" : C_Int.t;
val ETIMEDOUT = _const "Posix_Error_ETIMEDOUT" : C_Int.t;
val ETXTBSY = _const "Posix_Error_ETXTBSY" : C_Int.t;
val EWOULDBLOCK = _const "Posix_Error_EWOULDBLOCK" : C_Int.t;
val EXDEV = _const "Posix_Error_EXDEV" : C_Int.t;
val getErrno = _import "Posix_Error_getErrno" private : unit -> C_Int.t;
val strError = _import "Posix_Error_strError" private : C_Int.t -> C_String.t;
end
structure FileSys = 
struct
structure A = 
struct
val F_OK = _const "Posix_FileSys_A_F_OK" : C_Int.t;
val R_OK = _const "Posix_FileSys_A_R_OK" : C_Int.t;
val W_OK = _const "Posix_FileSys_A_W_OK" : C_Int.t;
val X_OK = _const "Posix_FileSys_A_X_OK" : C_Int.t;
end
val access = _import "Posix_FileSys_access" private : NullString8.t * C_Int.t -> (C_Int.t) C_Errno.t;
val chdir = _import "Posix_FileSys_chdir" private : NullString8.t -> (C_Int.t) C_Errno.t;
val chmod = _import "Posix_FileSys_chmod" private : NullString8.t * C_Mode.t -> (C_Int.t) C_Errno.t;
val chown = _import "Posix_FileSys_chown" private : NullString8.t * C_UId.t * C_GId.t -> (C_Int.t) C_Errno.t;
structure Dirstream = 
struct
val closeDir = _import "Posix_FileSys_Dirstream_closeDir" private : C_DirP.t -> (C_Int.t) C_Errno.t;
val openDir = _import "Posix_FileSys_Dirstream_openDir" private : NullString8.t -> (C_DirP.t) C_Errno.t;
val readDir = _import "Posix_FileSys_Dirstream_readDir" private : C_DirP.t -> (C_String.t) C_Errno.t;
val rewindDir = _import "Posix_FileSys_Dirstream_rewindDir" private : C_DirP.t -> unit;
end
val fchdir = _import "Posix_FileSys_fchdir" private : C_Fd.t -> (C_Int.t) C_Errno.t;
val fchmod = _import "Posix_FileSys_fchmod" private : C_Fd.t * C_Mode.t -> (C_Int.t) C_Errno.t;
val fchown = _import "Posix_FileSys_fchown" private : C_Fd.t * C_UId.t * C_GId.t -> (C_Int.t) C_Errno.t;
val fpathconf = _import "Posix_FileSys_fpathconf" private : C_Fd.t * C_Int.t -> (C_Long.t) C_Errno.t;
val ftruncate = _import "Posix_FileSys_ftruncate" private : C_Fd.t * C_Off.t -> (C_Int.t) C_Errno.t;
val getcwd = _import "Posix_FileSys_getcwd" private : (Char8.t) array * C_Size.t -> (C_String.t) C_Errno.t;
val link = _import "Posix_FileSys_link" private : NullString8.t * NullString8.t -> (C_Int.t) C_Errno.t;
val mkdir = _import "Posix_FileSys_mkdir" private : NullString8.t * C_Mode.t -> (C_Int.t) C_Errno.t;
val mkfifo = _import "Posix_FileSys_mkfifo" private : NullString8.t * C_Mode.t -> (C_Int.t) C_Errno.t;
structure O = 
struct
val APPEND = _const "Posix_FileSys_O_APPEND" : C_Int.t;
val BINARY = _const "Posix_FileSys_O_BINARY" : C_Int.t;
val CREAT = _const "Posix_FileSys_O_CREAT" : C_Int.t;
val DSYNC = _const "Posix_FileSys_O_DSYNC" : C_Int.t;
val EXCL = _const "Posix_FileSys_O_EXCL" : C_Int.t;
val NOCTTY = _const "Posix_FileSys_O_NOCTTY" : C_Int.t;
val NONBLOCK = _const "Posix_FileSys_O_NONBLOCK" : C_Int.t;
val RDONLY = _const "Posix_FileSys_O_RDONLY" : C_Int.t;
val RDWR = _const "Posix_FileSys_O_RDWR" : C_Int.t;
val RSYNC = _const "Posix_FileSys_O_RSYNC" : C_Int.t;
val SYNC = _const "Posix_FileSys_O_SYNC" : C_Int.t;
val TEXT = _const "Posix_FileSys_O_TEXT" : C_Int.t;
val TRUNC = _const "Posix_FileSys_O_TRUNC" : C_Int.t;
val WRONLY = _const "Posix_FileSys_O_WRONLY" : C_Int.t;
end
val open2 = _import "Posix_FileSys_open2" private : NullString8.t * C_Int.t -> (C_Fd.t) C_Errno.t;
val open3 = _import "Posix_FileSys_open3" private : NullString8.t * C_Int.t * C_Mode.t -> (C_Fd.t) C_Errno.t;
val pathconf = _import "Posix_FileSys_pathconf" private : NullString8.t * C_Int.t -> (C_Long.t) C_Errno.t;
structure PC = 
struct
val ALLOC_SIZE_MIN = _const "Posix_FileSys_PC_ALLOC_SIZE_MIN" : C_Int.t;
val ASYNC_IO = _const "Posix_FileSys_PC_ASYNC_IO" : C_Int.t;
val CHOWN_RESTRICTED = _const "Posix_FileSys_PC_CHOWN_RESTRICTED" : C_Int.t;
val FILESIZEBITS = _const "Posix_FileSys_PC_FILESIZEBITS" : C_Int.t;
val LINK_MAX = _const "Posix_FileSys_PC_LINK_MAX" : C_Int.t;
val MAX_CANON = _const "Posix_FileSys_PC_MAX_CANON" : C_Int.t;
val MAX_INPUT = _const "Posix_FileSys_PC_MAX_INPUT" : C_Int.t;
val NAME_MAX = _const "Posix_FileSys_PC_NAME_MAX" : C_Int.t;
val NO_TRUNC = _const "Posix_FileSys_PC_NO_TRUNC" : C_Int.t;
val PATH_MAX = _const "Posix_FileSys_PC_PATH_MAX" : C_Int.t;
val PIPE_BUF = _const "Posix_FileSys_PC_PIPE_BUF" : C_Int.t;
val PRIO_IO = _const "Posix_FileSys_PC_PRIO_IO" : C_Int.t;
val REC_INCR_XFER_SIZE = _const "Posix_FileSys_PC_REC_INCR_XFER_SIZE" : C_Int.t;
val REC_MAX_XFER_SIZE = _const "Posix_FileSys_PC_REC_MAX_XFER_SIZE" : C_Int.t;
val REC_MIN_XFER_SIZE = _const "Posix_FileSys_PC_REC_MIN_XFER_SIZE" : C_Int.t;
val REC_XFER_ALIGN = _const "Posix_FileSys_PC_REC_XFER_ALIGN" : C_Int.t;
val SYMLINK_MAX = _const "Posix_FileSys_PC_SYMLINK_MAX" : C_Int.t;
val SYNC_IO = _const "Posix_FileSys_PC_SYNC_IO" : C_Int.t;
val TWO_SYMLINKS = _const "Posix_FileSys_PC_TWO_SYMLINKS" : C_Int.t;
val VDISABLE = _const "Posix_FileSys_PC_VDISABLE" : C_Int.t;
end
val readlink = _import "Posix_FileSys_readlink" private : NullString8.t * (Char8.t) array * C_Size.t -> (C_SSize.t) C_Errno.t;
val rename = _import "Posix_FileSys_rename" private : NullString8.t * NullString8.t -> (C_Int.t) C_Errno.t;
val rmdir = _import "Posix_FileSys_rmdir" private : NullString8.t -> (C_Int.t) C_Errno.t;
structure S = 
struct
val IFBLK = _const "Posix_FileSys_S_IFBLK" : C_Mode.t;
val IFCHR = _const "Posix_FileSys_S_IFCHR" : C_Mode.t;
val IFDIR = _const "Posix_FileSys_S_IFDIR" : C_Mode.t;
val IFIFO = _const "Posix_FileSys_S_IFIFO" : C_Mode.t;
val IFLNK = _const "Posix_FileSys_S_IFLNK" : C_Mode.t;
val IFMT = _const "Posix_FileSys_S_IFMT" : C_Mode.t;
val IFREG = _const "Posix_FileSys_S_IFREG" : C_Mode.t;
val IFSOCK = _const "Posix_FileSys_S_IFSOCK" : C_Mode.t;
val IRGRP = _const "Posix_FileSys_S_IRGRP" : C_Mode.t;
val IROTH = _const "Posix_FileSys_S_IROTH" : C_Mode.t;
val IRUSR = _const "Posix_FileSys_S_IRUSR" : C_Mode.t;
val IRWXG = _const "Posix_FileSys_S_IRWXG" : C_Mode.t;
val IRWXO = _const "Posix_FileSys_S_IRWXO" : C_Mode.t;
val IRWXU = _const "Posix_FileSys_S_IRWXU" : C_Mode.t;
val ISGID = _const "Posix_FileSys_S_ISGID" : C_Mode.t;
val ISUID = _const "Posix_FileSys_S_ISUID" : C_Mode.t;
val ISVTX = _const "Posix_FileSys_S_ISVTX" : C_Mode.t;
val IWGRP = _const "Posix_FileSys_S_IWGRP" : C_Mode.t;
val IWOTH = _const "Posix_FileSys_S_IWOTH" : C_Mode.t;
val IWUSR = _const "Posix_FileSys_S_IWUSR" : C_Mode.t;
val IXGRP = _const "Posix_FileSys_S_IXGRP" : C_Mode.t;
val IXOTH = _const "Posix_FileSys_S_IXOTH" : C_Mode.t;
val IXUSR = _const "Posix_FileSys_S_IXUSR" : C_Mode.t;
end
structure ST = 
struct
val isBlk = _import "Posix_FileSys_ST_isBlk" private : C_Mode.t -> C_Int.t;
val isChr = _import "Posix_FileSys_ST_isChr" private : C_Mode.t -> C_Int.t;
val isDir = _import "Posix_FileSys_ST_isDir" private : C_Mode.t -> C_Int.t;
val isFIFO = _import "Posix_FileSys_ST_isFIFO" private : C_Mode.t -> C_Int.t;
val isLink = _import "Posix_FileSys_ST_isLink" private : C_Mode.t -> C_Int.t;
val isReg = _import "Posix_FileSys_ST_isReg" private : C_Mode.t -> C_Int.t;
val isSock = _import "Posix_FileSys_ST_isSock" private : C_Mode.t -> C_Int.t;
end
structure Stat = 
struct
val fstat = _import "Posix_FileSys_Stat_fstat" private : C_Fd.t -> (C_Int.t) C_Errno.t;
val getATime = _import "Posix_FileSys_Stat_getATime" private : unit -> C_Time.t;
val getCTime = _import "Posix_FileSys_Stat_getCTime" private : unit -> C_Time.t;
val getDev = _import "Posix_FileSys_Stat_getDev" private : unit -> C_Dev.t;
val getGId = _import "Posix_FileSys_Stat_getGId" private : unit -> C_GId.t;
val getINo = _import "Posix_FileSys_Stat_getINo" private : unit -> C_INo.t;
val getMode = _import "Posix_FileSys_Stat_getMode" private : unit -> C_Mode.t;
val getMTime = _import "Posix_FileSys_Stat_getMTime" private : unit -> C_Time.t;
val getNLink = _import "Posix_FileSys_Stat_getNLink" private : unit -> C_NLink.t;
val getRDev = _import "Posix_FileSys_Stat_getRDev" private : unit -> C_Dev.t;
val getSize = _import "Posix_FileSys_Stat_getSize" private : unit -> C_Off.t;
val getUId = _import "Posix_FileSys_Stat_getUId" private : unit -> C_UId.t;
val lstat = _import "Posix_FileSys_Stat_lstat" private : NullString8.t -> (C_Int.t) C_Errno.t;
